{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "FPPlayer",
            "id": "0b34927f-cc2b-4de9-8b25-203c84a93f63",
            "actions": [
                {
                    "name": "Move Forward/Backwards",
                    "type": "PassThrough",
                    "id": "64a5d5b0-b38e-41c9-986a-310ce693686b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Move Left/Right",
                    "type": "PassThrough",
                    "id": "a6d1ef5b-185f-48f4-9269-27da3685264f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "910954c9-7cae-4429-8fa1-4e43b66bced5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "Crouch",
                    "type": "PassThrough",
                    "id": "3ea3144a-5a2a-4a72-a50f-d5969353c8ec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "7b8d37ea-d917-4fb7-ab1d-191a1cb38b98",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "a74dc915-415c-4668-85e7-ac5479d6ed8b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim Down Sights",
                    "type": "Button",
                    "id": "bde0b333-1f4b-4192-b1f6-d746caad385d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "ba688af3-eee2-476a-ae2b-ffcf1fe4864c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap",
                    "initialStateCheck": false
                },
                {
                    "name": "InteractWtih ",
                    "type": "Button",
                    "id": "75575b93-b018-45d2-8613-d6e904b34fdb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "fd9f8615-f07f-42df-8111-1d7adef34605",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "MoveKB",
                    "id": "10bd47b5-5be8-4171-9ae3-176d142c40aa",
                    "path": "1DAxis",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Move Forward/Backwards",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "a56d87f7-b46b-4f84-a2cf-6172ef4f45d1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move Forward/Backwards",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "64a76770-779c-4b91-a16d-c6817d0ca463",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move Forward/Backwards",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "63b62d1e-a16f-441a-b6b5-217902e903ad",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9f295a2f-2b46-4450-8aa8-091c0d1cc783",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Aim Down Sights",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5a5a96f-0352-48ed-9759-d697b39d9a18",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a89b5d4-edce-438b-8744-43f2499a1092",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0dfa4dc9-c85a-4138-a545-64564aaf1ee1",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c35607e-f3aa-4407-a3b4-7a9aafecacff",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InteractWtih ",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cc756f09-3acd-4768-a651-8485be74f4e3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "MoveKB",
                    "id": "5020e220-7be7-451f-ab29-d797efd17054",
                    "path": "1DAxis",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "Move Left/Right",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "Negative",
                    "id": "5cecde15-d9f3-48d6-ac7a-183db61a9fe1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move Left/Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Positive",
                    "id": "707e68ce-a3d6-40ff-b88c-20f7545e10f0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move Left/Right",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}